Add Markdown support

--- a/pages/writing/developer-tools-homebrew.mdx
+++ b/pages/writing/developer-tools-homebrew.mdx
@@ -1,9 +1,14 @@
----
-date: "2013-12-16"
-description: "An overview of using Homebrew to manage development packages on macOS."
-path: "/writing/developer-tools-homebrew/"
-title: "Developer Tools: Homebrew"
----
+import Layout from "../../components/Layout";
+
+export const metadata = {
+  date: "2013-12-16",
+  description:
+    "An overview of using Homebrew to manage development packages on macOS.",
+  path: "/writing/developer-tools-homebrew/",
+  title: "Developer Tools: Homebrew"
+};
+
+<Layout>
 
 I recently received a new MacBook Pro &amp; went through the motions of setting up my development environment. One of my favorite tools for managing my environment is the Mac OS X package manager tool [Homebrew](http://brew.sh/). The following is a brief overview/tutorial of Homebrew.
 
@@ -52,3 +57,5 @@ brew uninstall node # uninstalls a specific package
 ```
 
 That&rsquo;s it! For most use cases that will be all you need. There are additional commands &amp; more information available on the [wiki](https://github.com/Homebrew/homebrew/wiki) if you&rsquo;d like to continue reading more about Homebrew. If you have any questions, feel free to leave a comment below.
+
+</Layout>
