--- a/pages/writing/using-yarn-on-elastic-beanstalk.mdx
+++ b/pages/writing/using-yarn-on-elastic-beanstalk.mdx
@@ -1,9 +1,9 @@
----
-date: "2018-04-15"
-description: "A brief overview of setting up Yarn on Elastic Beanstalk."
-path: "/writing/using-yarn-on-elastic-beanstalk/"
-title: "Using Yarn on Elastic Beanstalk"
----
+export const metadata = {
+  date: "2018-04-15",
+  description: "A brief overview of setting up Yarn on Elastic Beanstalk.",
+  path: "/writing/using-yarn-on-elastic-beanstalk/",
+  title: "Using Yarn on Elastic Beanstalk"
+};
 
 At GoNoodle, our team uses [Yarn](https://yarnpkg.com/) to manage our packages. We moved to Yarn from npm for improved install speeds and the deterministic benefits of its lock file.
 
