Add list of posts

--- a/pages/writing/developer-tools-homebrew.mdx
+++ b/pages/writing/developer-tools-homebrew.mdx
@@ -1,10 +1,10 @@
 import Layout from "../../components/Layout";
 
-export const metadata = {
-  date: "2013-12-16",
+export const meta = {
   description:
     "An overview of using Homebrew to manage development packages on macOS.",
   path: "/writing/developer-tools-homebrew/",
+  published: "2013-12-16",
   title: "Developer Tools: Homebrew"
 };
 
