Add various styles

--- a/pages/writing/developer-tools-homebrew.mdx
+++ b/pages/writing/developer-tools-homebrew.mdx
@@ -1,4 +1,5 @@
 import Layout from "../../components/Layout";
+import Post from "../../components/Post";
 
 export const meta = {
   description:
@@ -9,6 +10,7 @@ export const meta = {
 };
 
 <Layout>
+<Post {...meta}>
 
 I recently received a new MacBook Pro &amp; went through the motions of setting up my development environment. One of my favorite tools for managing my environment is the Mac OS X package manager tool [Homebrew](http://brew.sh/). The following is a brief overview/tutorial of Homebrew.
 
@@ -58,4 +60,5 @@ brew uninstall node # uninstalls a specific package
 
 That&rsquo;s it! For most use cases that will be all you need. There are additional commands &amp; more information available on the [wiki](https://github.com/Homebrew/homebrew/wiki) if you&rsquo;d like to continue reading more about Homebrew. If you have any questions, feel free to leave a comment below.
 
+</Post>
 </Layout>
