--- a/pages/writing/using-yarn-on-elastic-beanstalk.mdx
+++ b/pages/writing/using-yarn-on-elastic-beanstalk.mdx
@@ -1,4 +1,5 @@
 import Layout from "../../components/Layout";
+import Post from "../../components/Post";
 
 export const meta = {
   description: "A brief overview of setting up Yarn on Elastic Beanstalk.",
@@ -8,6 +9,7 @@ export const meta = {
 };
 
 <Layout>
+<Post {...meta}>
 
 At GoNoodle, our team uses [Yarn](https://yarnpkg.com/) to manage our packages. We moved to Yarn from npm for improved install speeds and the deterministic benefits of its lock file.
 We recently moved from serving our web applications from static files on S3 to server rendering with Node instances on Elastic Beanstalk. That posed a problem as AWS support stated that support for Yarn is not provided on Elastic Beanstalk. The good news is that it is fairly simple to setup yourself.
@@ -73,4 +75,5 @@ Deleting/renaming a platform hook in your project will not delete/rename the pla
 
 Elastic Beanstalk [solution stacks](https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/concepts.platforms.html), the convenient packaged stacks provided by Amazon, utilize platform hooks as well. So, if Amazon decides to significantly modify the platform hooks included in your chosen solution stack, that could potentially cause breakages in your hooks. You’ll want to test upgrades to your solution stack in a staging environment before applying them to production.
 
+</Post>
 </Layout>
