Improve source consistency

--- a/pages/writing/developer-tools-homebrew.mdx
+++ b/pages/writing/developer-tools-homebrew.mdx
@@ -1,7 +1,7 @@
 import Layout from "../../components/Layout";
 import Post from "../../components/Post";
 
-export const meta = {
+export let meta = {
   description:
     "An overview of using Homebrew to manage development packages on macOS.",
   path: "/writing/developer-tools-homebrew/",
