--- a/pages/writing/migration-to-jekyll-my-journey-to-understanding-yeoman.mdx
+++ b/pages/writing/migration-to-jekyll-my-journey-to-understanding-yeoman.mdx
@@ -1,7 +1,7 @@
 import Layout from "../../components/Layout";
 import Post from "../../components/Post";
 
-export const meta = {
+export let meta = {
   description: "My journey to understand the benefits and use-cases of Yeoman.",
   path: "/writing/migration-to-jekyll-my-journey-to-understanding-yeoman/",
   published: "2013-10-30",
