--- a/pages/writing/using-yarn-on-elastic-beanstalk.mdx
+++ b/pages/writing/using-yarn-on-elastic-beanstalk.mdx
@@ -1,7 +1,7 @@
 import Layout from "../../components/Layout";
 import Post from "../../components/Post";
 
-export const meta = {
+export let meta = {
   description: "A brief overview of setting up Yarn on Elastic Beanstalk.",
   path: "/writing/using-yarn-on-elastic-beanstalk/",
   published: "2018-04-15",
