Update post copy

--- a/pages/writing/building-software-together.mdx
+++ b/pages/writing/building-software-together.mdx
@@ -18,7 +18,7 @@ Even with great tooling like this, however, it can still be challenging avoid mi
 1. Provide an explanation for the “why” behind your requested changes (e.g. outline the pros and cons of both the current and proposed approach to a problem) to avoid the perception of arbitrary demands.
 1. When providing a personal opinion or preference, leave opportunity for feedback on the topic (e.g. “What are your thoughts on what I have proposed?”) to promote collaboration.
 
-Communicating tone and intent via text is difficult. Using collaborative language can go a long way to unifying a team around the common goal—shipping great software.
+Communicating tone and intent via text is difficult. Using collaborative language can go a long way towards unifying a team around the common goal—shipping great software.
 
 </Post>
 </Layout>
