--- a/pages/writing/migration-to-jekyll-understanding-yeoman.mdx
+++ b/pages/writing/migration-to-jekyll-understanding-yeoman.mdx
@@ -1,4 +1,4 @@
-import Layout from "../../components/Layout";
+import { make as Layout } from "../../components/Layout.bs";
 import Post from "../../components/Post";
 
 export let meta = {
