--- a/pages/writing/using-yarn-on-elastic-beanstalk.mdx
+++ b/pages/writing/using-yarn-on-elastic-beanstalk.mdx
@@ -1,4 +1,4 @@
-import Layout from "../../components/Layout";
+import { make as Layout } from "../../components/Layout.bs";
 import Post from "../../components/Post";
 
 export let meta = {
