[wip] Build Post in ReasonML

--- a/pages/writing/developer-tools-homebrew.mdx
+++ b/pages/writing/developer-tools-homebrew.mdx
@@ -1,5 +1,5 @@
 import { make as Layout } from "../../components/Layout.bs";
-import Post from "../../components/Post";
+import { make as Post } from "../../components/Post.bs";
 
 export let meta = {
   description:
