--- a/pages/writing/migration-to-jekyll-understanding-yeoman.mdx
+++ b/pages/writing/migration-to-jekyll-understanding-yeoman.mdx
@@ -1,5 +1,5 @@
 import { make as Layout } from "../../components/Layout.bs";
-import Post from "../../components/Post";
+import { make as Post } from "../../components/Post.bs";
 
 export let meta = {
   description: "My journey to understand the benefits and use-cases of Yeoman.",
