--- a/pages/writing/building-software-together.mdx
+++ b/pages/writing/building-software-together.mdx
@@ -1,10 +1,10 @@
-import Layout from "../../components/Layout";
-import Post from "../../components/Post";
+import { make as Layout } from "../../components/Layout.bs";
+import { make as Post } from "../../components/Post.bs";
 
 export let meta = {
   description: "A practical guide to code review.",
   published: "2019-12-27",
-  title: "Building Software Together"
+  title: "Building Software Together",
 };
 
 <Layout>
