--- a/pages/writing/using-yarn-on-elastic-beanstalk.mdx
+++ b/pages/writing/using-yarn-on-elastic-beanstalk.mdx
@@ -1,5 +1,5 @@
-import Layout from "../../components/Layout";
-import Post from "../../components/Post";
+import { make as Layout } from "../../components/Layout.bs";
+import { make as Post } from "../../components/Post.bs";
 
 export let meta = {
   description: "A brief overview of setting up Yarn on Elastic Beanstalk.",
