Fix biography grammar

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,6 @@ import { DESCRIPTION } from "../components/layout";
 
 ![David Calhoun](/david.jpg)
 
-I am a {DESCRIPTION}. I enjoy working with on diverse teams, as I often learn and improve from those around me.
+I am a {DESCRIPTION}. I enjoy working on diverse teams, as I often learn and improve from those around me.
 
 Currently, I am a Senior Software Engineer at [Automattic](https://automattic.com/) building the native version of [Gutenberg](https://github.com/WordPress/gutenberg), the block editor for the [WordPress](https://wordpress.org) mobile apps.
