Fix meta data inconsistency

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,8 @@
-import { DESCRIPTION } from '../components/layout';
+import { NAME, DESCRIPTION } from '../components/layout';
 
-# Hi. 👋🏻 <br /> I’m David Calhoun.
+# Hi. 👋🏻 <br /> I’m {NAME}.
 
-![David Calhoun](/david.jpg)
+![Portrait of {NAME}](/david.jpg)
 
 I am a {DESCRIPTION}. I enjoy working on diverse teams, as I often learn and improve from those around me.
 
