Improve accessibility for screen readers

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-import { NAME, DESCRIPTION } from '../components/layout';
+import { NAME, DESCRIPTION } from "../components/layout";
 
 # Hi. 👋🏻 <br /> I’m {NAME}.
 
