--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@ import { NAME, DESCRIPTION } from "../components/layout";
 
 # Hi. 👋🏻 <br /> I’m {NAME}.
 
-![Portrait of David Calhoun](/david.jpg)
+![Portrait of David Calhoun](../public/david.jpg)
 
 I am a {DESCRIPTION}. I enjoy working on diverse teams, as I often learn and improve from those around me.
 
