Share constants with RSS feed generator

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-import { NAME, DESCRIPTION } from "../components/layout";
+import { NAME, DESCRIPTION } from "../lib/constants";
 
 # Hi. 👋🏻 <br /> I’m {NAME}.
 
