feat: Simplify about description

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,6 @@ import { NAME, DESCRIPTION } from "../lib/constants";
 
 ![Portrait of David Calhoun](../public/david.jpg)
 
-I am a {DESCRIPTION}. I enjoy working on diverse teams, as I often learn and improve from those around me.
+I am a {DESCRIPTION}.
 
 Currently, I am a Senior Software Engineer at [Automattic](https://automattic.com/) building [Gutenberg](https://github.com/WordPress/gutenberg), the block editor for [WordPress](https://wordpress.org).
